Fix Sonar issues (#1831)